<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".poll"
    android:background="@drawable/w10">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="10dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" book name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="exmaple description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="165dp"
            android:layout_height="124dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="30dp"
            android:hint="select"
            android:text="select choice" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="10dp"
        app:contentPadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="book name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="exmaple description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="165dp"
            android:layout_height="124dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="30dp"
            android:hint="select"
            android:text="select choice" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/tvpollsubmit"
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:text="submit"
        android:textSize="16sp"
        app:backgroundTint="#540022"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"></Button>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="409dp"
        android:layout_height="171dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="7dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="10dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvpollsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/b_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="165dp"
            android:layout_height="124dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="30dp"
            android:hint="select"
            android:text="@string/radio_b"
            android:textColor="#040404" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>